fixed layout issues

--- a/style.css
+++ b/style.css
@@ -119,6 +119,10 @@ h4.link a {
 .error-message {
   color: red;
 }
+.resources_li {
+  display: block;
+  list-style: circle;
+}
 
 @media screen and (min-width: 700px) {
   .results-container {
@@ -151,7 +155,7 @@ h4.link a {
     text-align: center;
   }
 
-  section ul,
+  section ul.mp-info,
   footer {
     display: flex;
   }
